--- a/images/x86_64/WindowsServer_2016/shippable.yml
+++ b/images/x86_64/WindowsServer_2016/shippable.yml
@@ -759,6 +759,8 @@ jobs:
             - $env:RES_IMG_VER_NAME_DASH=$(shipctl get_resource_version_key windowsbaseami_prep RES_IMG_VER_NAME_DASH)
             - $env:RES_IMG_VER_NAME=$(shipctl get_resource_version_key windowsbaseami_prep RES_IMG_VER_NAME)
             - shipctl replace bootstrap_win.txt vars.json
+            - Get-Content ./vars.json | out-file -encoding ASCII ./vars.json
+            - Get-Content ./bootstrap_win.txt | out-file -encoding ASCII ./bootstrap_win.txt
             - packer validate -var-file="vars.json" basePatchAMI.json
             - packer build -machine-readable -var-file="vars.json" basePatchAMI.json 2>&1 | tee-object output.txt
             - $env:IMAGE_NAME=$(Get-content .\output.txt | where-object { $_ -match "artifact,0,id" } | foreach-object { (($_ -split ",")[5] -split ':')[1] })
