Redo windowsfinalami_prep

--- a/images/x86_64/WindowsServer_2016/shippable.yml
+++ b/images/x86_64/WindowsServer_2016/shippable.yml
@@ -813,11 +813,8 @@ jobs:
             - pushd "$(shipctl get_resource_state "buildami_repo")/windowsExec"
             - $env:AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field ami_bits_access_cli "accessKey")
             - $env:AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field ami_bits_access_cli "secretKey")
-            - $env:AMI_ID=$(shipctl get_resource_version_key windowsbaseami_patch versionName)
-            - $env:RES_IMG_VER_NAME_DASH=$(shipctl get_resource_version_key windowsbaseami_patch RES_IMG_VER_NAME_DASH)
-            # This is a workaround until shipctl replace on Windows is fixed in https://github.com/Shippable/heap/issues/2319
-            - $env:RES_IMG_DASH_VER_NAME=$(shipctl get_resource_version_key windowsbaseami_patch RES_IMG_VER_NAME_DASH)
-            - $env:RES_IMG_VER_NAME=$(shipctl get_resource_version_key windowsbaseami_patch RES_IMG_VER_NAME)
+            #- $env:AMI_ID=$(shipctl get_resource_version_key windowsbaseami_patch versionName)
+            - $env:AMI_ID=$env:SOURCE_AMI
             - $env:REL_VER=$(shipctl get_resource_version_name prod_release)
             - $env:REL_DASH_VER=($env:REL_VER).replace(".", "-")
             - shipctl replace bootstrap_win.txt vars.json
@@ -829,12 +826,12 @@ jobs:
               $bootstrap_content = get-content .\bootstrap_win.txt
               $bootstrap_path = (Get-ChildItem .\bootstrap_win.txt).FullName
               [IO.File]::WriteAllLines($bootstrap_path, $bootstrap_content)
-            - packer validate -var-file="vars.json" execAMI.json
-            - packer build -machine-readable -var-file="vars.json" execAMI.json 2>&1 | tee-object output.txt
+            - packer validate -var-file="vars.json" execAMIFresh.json
+            - packer build -machine-readable -var-file="vars.json" execAMIFresh.json 2>&1 | tee-object output.txt
             - $env:IMAGE_NAME=$(Get-content .\output.txt | where-object { $_ -match "artifact,0,id" } | foreach-object { (($_ -split ",")[5] -split ':')[1] })
     on_success:
       script:
-        - shipctl put_resource_state_multi $env:JOB_NAME "RES_REL_VER_NAME=$env:RES_REL_VER_NAME" "RES_REL_VER_NAME_DASH=$env:RES_REL_VER_NAME_DASH" "RES_IMG_VER_NAME=$env:RES_IMG_VER_NAME" "RES_IMG_VER_NAME_DASH=$env:RES_IMG_VER_NAME_DASH" "IMAGE_NAMES_SPACED=$env:IMAGE_NAMES_SPACED"
+        - shipctl put_resource_state_multi $env:JOB_NAME "RES_REL_VER_NAME=$env:RES_REL_VER_NAME" "RES_REL_VER_NAME_DASH=$env:RES_REL_VER_NAME_DASH"
     on_failure:
       script:
         - cat output.txt
