Fix on_success updates for w2k16_x8664_tag, w2k16dotnetcore_x8664_tag and w2k16aspnetcore_x8664_tag

--- a/images/x86_64/WindowsServer_2016/shippable.yml
+++ b/images/x86_64/WindowsServer_2016/shippable.yml
@@ -190,7 +190,7 @@ jobs:
                docker push "${IMG_NAME}:${REL_VER}"
     on_success:
       script:
-        - shipctl put_resource_state_multi $JOB_NAME "versionName=${REL_VER}" "TAG_COMMIT_SHA=${REPO_COMMIT}" "TAG_IMG=${REL_VER}"
+        - shipctl put_resource_state_multi $env:JOB_NAME "versionName=${REL_VER}" "TAG_COMMIT_SHA=${REPO_COMMIT}" "TAG_IMG=${REL_VER}"
 
   - name: w2k16_repo_tag
     type: runSh
@@ -276,7 +276,7 @@ jobs:
                docker push "${IMG_NAME}:${REL_VER}"
     on_success:
       script:
-        - shipctl put_resource_state_multi $JOB_NAME "versionName=${REL_VER}" "TAG_COMMIT_SHA=${REPO_COMMIT}" "TAG_IMG=${REL_VER}"
+        - shipctl put_resource_state_multi $env:JOB_NAME "versionName=${REL_VER}" "TAG_COMMIT_SHA=${REPO_COMMIT}" "TAG_IMG=${REL_VER}"
 
   - name: w2k16dotnetcore_repo_tag
     type: runSh
@@ -362,7 +362,7 @@ jobs:
                docker push "${IMG_NAME}:${REL_VER}"
     on_success:
       script:
-        - shipctl put_resource_state_multi $JOB_NAME "versionName=${REL_VER}" "TAG_COMMIT_SHA=${REPO_COMMIT}" "TAG_IMG=${REL_VER}"
+        - shipctl put_resource_state_multi $env:JOB_NAME "versionName=${REL_VER}" "TAG_COMMIT_SHA=${REPO_COMMIT}" "TAG_IMG=${REL_VER}"
 
   - name: w2k16aspnetcore_repo_tag
     type: runSh
