Move v634_w2k16_aws to w2k16_cache pool

--- a/images/x86_64/WindowsServer_2016/shippable.yml
+++ b/images/x86_64/WindowsServer_2016/shippable.yml
@@ -839,6 +839,8 @@ jobs:
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
+    runtime:
+      nodePool: w2k16_cache
     steps:
       - IN: buildami_repo
         switch: off
