--- a/images/x86_64/WindowsServer_2016/shippable.yml
+++ b/images/x86_64/WindowsServer_2016/shippable.yml
@@ -861,13 +861,14 @@ jobs:
                 imageName: drydock/w16
                 imageTag: v6.4.4
                 env:
-                  - V634_SOURCE_AMI: ami-e03d5c9f
+                  - UPDATE_AMI_ID: ami-e03d5c9f
+                  - UPDATE_AMI_VERSION: v6.3.4
                   - AMI_TYPE: v634
           script:
             - pushd "$(shipctl get_resource_state "buildami_repo")/windowsExec"
             - $env:AWS_ACCESS_KEY_ID = $(shipctl get_integration_resource_field ami_bits_access_cli "accessKey")
             - $env:AWS_SECRET_ACCESS_KEY = $(shipctl get_integration_resource_field ami_bits_access_cli "secretKey")
-            - $env:AMI_ID = $env:V634_SOURCE_AMI
+            - $env:AMI_ID = $env:UPDATE_AMI_ID
             - $env:REL_VER = $(shipctl get_resource_version_name prod_release)
             - $env:REL_DASH_VER = ($env:REL_VER).replace(".", "-")
             - shipctl replace bootstrap_win.txt vars.json
@@ -893,6 +894,8 @@ jobs:
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
+    runtime:
+      nodePool: w2k16_cache
     steps:
       - IN: buildami_repo
         switch: off
@@ -900,22 +903,41 @@ jobs:
         switch: off
       - IN: windowsbaseami_winrm_keys
         switch: off
-      - IN: windowsfinalami_prep
-        switch: off
       - IN: prod_release
         switch: off
-      - IN: baseami_params
-        switch: off
-      - IN: ami_bits_access
+      - IN: ami_bits_access_cli
         switch: off
       - IN: node_repo_file_tag
-      - IN: cexec_repo_file_tag
-      - IN: reqProc_repo_tag
+      - IN: reqKick_repo_file_tag
+      - IN: w2k16reqProc_dd_tag
       - TASK:
+          runtime:
+              options:
+                imageName: drydock/w16
+                imageTag: v6.4.4
+                env:
+                  - UPDATE_AMI_ID: ami-27ddbb58
+                  - UPDATE_AMI_VERSION: v6.4.4
+                  - AMI_TYPE: v644
           script:
-            - pushd $(shipctl get_resource_state "buildami_repo")
-            - cd windowsExec
-            - ./execPackUpdate.sh v644_w2k16_aws prod_release ami-4518a63a v644 ami_bits_access
+            - pushd "$(shipctl get_resource_state "buildami_repo")/windowsExec"
+            - $env:AWS_ACCESS_KEY_ID = $(shipctl get_integration_resource_field ami_bits_access_cli "accessKey")
+            - $env:AWS_SECRET_ACCESS_KEY = $(shipctl get_integration_resource_field ami_bits_access_cli "secretKey")
+            - $env:AMI_ID = $env:UPDATE_AMI_ID
+            - $env:REL_VER = $(shipctl get_resource_version_name prod_release)
+            - $env:REL_DASH_VER = ($env:REL_VER).replace(".", "-")
+            - shipctl replace bootstrap_win.txt vars.json
+            - |
+              $vars_content = Get-Content .\vars.json
+              $vars_path = (Get-ChildItem .\vars.json).FullName
+              [IO.File]::WriteAllLines($vars_path, $vars_content)
+            - |
+              $bootstrap_content = get-content .\bootstrap_win.txt
+              $bootstrap_path = (Get-ChildItem .\bootstrap_win.txt).FullName
+              [IO.File]::WriteAllLines($bootstrap_path, $bootstrap_content)
+            - packer validate -var-file="vars.json" execAMIUpdate.json
+            - packer build -machine-readable -var-file="vars.json" execAMIUpdate.json 2>&1 | tee-object output.txt
+            - $env:IMAGE_NAME=$(Get-content .\output.txt | where-object { $_ -match "artifact,0,id" } | foreach-object { (($_ -split ",")[5] -split ':')[1] })
             - popd
     on_failure:
       - script: cat /build/IN/buildami_repo/gitRepo/windowsExec/output.txt
